@@ -8,3 +8,4 @@ include TESTING
 include ToDo
 include pungi.spec
 include config/*
+include share/*
